# UMS

./: .gitignore  LICENSE  README.md
design/: handshake-sample-stream.puml  hidden-implementation.puml  sample-format.puml  system-architecture.puml  user-flow.puml
ums-core/: .gitignore  CMakeLists.txt  CMakePresets.json
ums-core/cmake/: ums-core-config.cmake.in
ums-core/include/ums/: datatype.h  error.h  sampling.h  triple_buffer.h  ums_core.h
ums-core/src/: CMakeLists.txt  ums_core.c
ums-core/tests/: CMakeLists.txt  test_sampling.cpp
